--- a/CSS/Grid/grid_basics.html
+++ b/CSS/Grid/grid_basics.html
@@ -1,15 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid Introduction</title>
-</head>
-<body>
+    <style>
+      .grid-container {
+        display: grid;
+        grid-template-columns: 1fr 2fr 1fr;
+        grid-template-rows: 100px 200px 100px;
+        gap: 5px; /* Adds spacing between grid items */
+      }
+
+      .item {
+        background-color: orange;
+        border: 1px solid black;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 20px;
+        font-weight: bold;
+      }
+
+      .item img {
+        max-width: 100%;
+        max-height: 100%;
+      }
+
+      .item1 {
+        grid-column: 1 / 3;
+        grid-row: 1 / 2;
+      }
+
+      .item2 {
+        grid-column: 3 / 4;
+        grid-row: 1 / 3;
+      }
+
+      .item6 {
+        grid-column: 2 / 4;
+        grid-row: 3 / 4;
+      }
+      body {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        margin: 0;
+        background-color: #f4f4f4;
+      }
+    </style>
+  </head>
+  <body>
     <div class="grid-container">
-        <div class="item">1</div>
-        <div class="item">2</div>
-        <div class="item">3</div>
+      <div class="item item1">
+        <img src="../images/d2pz_tflp_210218.jpg" alt="" />
+      </div>
+      <div class="item item2">
+        <img src="../images/o71x_wlcg_220926.jpg" alt="Old couple" />
+      </div>
+      <div class="item">
+        <img
+          src="../images/3d-portrait-happy-family.jpg"
+          alt="3d-portrait-happy-family"
+        />
+      </div>
+      <div class="item">
+        <img src="../images/freepik__upload__64974.png" alt="hearts" />
+      </div>
+      <div class="item">
+        <img
+          src="../images/people-connecting-through-hugging.jpg"
+          alt="people-connecting-through-hugging"
+        />
+      </div>
+      <div class="item item6"><img src="../images/3103.jpg" alt="" /></div>
     </div>
-</body>
+  </body>
 </html>
