--- a/CSS/Grid/grid_basics.html
+++ b/CSS/Grid/grid_basics.html
@@ -11,9 +11,14 @@
         grid-template-rows: 100px 200px 100px;
         gap: 5px; /* Adds spacing between grid items */
       }
+      .item img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
 
       .item {
-        background-color: orange;
+        background-color: rgb(175, 252, 248);
         border: 1px solid black;
         display: flex;
         align-items: center;
