--- a/CSS/Login_Project/login.html
+++ b/CSS/Login_Project/login.html
@@ -1,63 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login page</title>
     <style>
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            background-color: #1a1a1a;
-            margin: 0;
-            padding: 0;
-            height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-        }
+      body {
+        font-family: Arial, Helvetica, sans-serif;
+        background-color: #1a1a1a;
+        margin: 0;
+        padding: 0;
+        height: 100vh;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
 
-        .card {
-            background-color: #9e9d9d;
-            border-radius: 8px;
-            padding: 30px;
-            width: 300px;
-        }
+      .card {
+        background-color: #9e9d9d;
+        border-radius: 8px;
+        padding: 30px;
+        width: 300px;
+      }
 
-        h2{
-            color: #0d6497;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-        form {
-            display: flex;
-            flex-direction: column;
-        }
-        input {
-            margin-bottom: 15px;
-            padding: 10px;
-            border-radius: 5px;
-            border: 1px solid black;
-            background-color: #f3f2f2;
-        }
-        button {
-            background-color: #4373da;
-            color: #fff;
-            padding: 10px;
-            border-radius: 8px;
-        }
-        button:hover {
-            background-color: #090261;
-        }
+      h2 {
+        color: #0d6497;
+        text-align: center;
+        margin-bottom: 20px;
+      }
+      form {
+        display: flex;
+        flex-direction: column;
+      }
+      input {
+        margin-bottom: 15px;
+        padding: 10px;
+        border-radius: 5px;
+        border: 1px solid black;
+        background-color: #f3f2f2;
+      }
+      button {
+        background-color: #4373da;
+        color: #fff;
+        padding: 10px;
+        border-radius: 8px;
+      }
+      button:hover {
+        background-color: #090261;
+      }
     </style>
-</head>
-<body>
+  </head>
+  <body>
     <div class="card">
-        <h2>Login</h2>
-        <form>
-            <input type="email" name="" id="" placeholder="Email">
-            <input type="password" name="" id="" placeholder="Password">
-            <button type="submit">Login</button>
-        </form>
+      <h2>Login</h2>
+      <form>
+        <input type="email" name="" id="" placeholder="Email" />
+        <input type="password" name="" id="" placeholder="Password" />
+        <button type="submit">Login</button>
+      </form>
     </div>
-</body>
+  </body>
 </html>
