--- a/CSS/Shopping_Card/index.html
+++ b/CSS/Shopping_Card/index.html
@@ -19,12 +19,12 @@
       /* Full-screen Background */
       body {
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 100vh;
         margin: 0;
-        background: url("../images/SL-092920-35860-07.jpg") no-repeat center
-          center/cover;
+        background: url("../images/SL-092920-35860-07.jpg") no-repeat center center/cover;
         position: relative;
         overflow: hidden;
       }
@@ -34,7 +34,8 @@
         background: rgba(255, 255, 255, 0.2);
         border-radius: 15px;
         padding: 20px;
-        width: 320px;
+        width: 90%;
+        max-width: 320px;
         height: 350px;
         display: flex;
         flex-direction: column;
@@ -67,14 +68,16 @@
         font-weight: 600;
         color: white;
         margin-bottom: 10px;
+        text-shadow: 1px 1px 5px rgba(0, 0, 0, 0.5);
       }
 
-      /* Description */
-      .card-desc {
-        font-size: 0.9rem;
-        color: white;
-        opacity: 0.8;
-        margin-bottom: 20px;
+      /* Button Container */
+      .btn-container {
+        display: flex;
+        justify-content: space-between;
+        width: 90%;
+        max-width: 320px;
+        margin-top: 15px; /* Space between card and buttons */
       }
 
       /* Button Styling */
@@ -88,6 +91,9 @@
         font-size: 1rem;
         transition: 0.3s ease;
         text-transform: uppercase;
+        flex: 1; /* Makes both buttons take equal space */
+        margin: 0 5px; /* Adds spacing between buttons */
+        text-align: center;
       }
 
       .btn:hover {
@@ -109,10 +115,14 @@
     </style>
   </head>
   <body>
+    <!-- Card -->
     <div class="card">
       <img src="../images/high-angle-old-motorcycle-outdoors.jpg" alt="bike" />
       <h2 class="card-title">Classic Motorcycle</h2>
-      <p class="card-desc">Vintage-style motorbike with modern engineering.</p>
+    </div>
+
+    <!-- Buttons Below the Card -->
+    <div class="btn-container">
       <button class="btn">Buy Now</button>
       <button class="btn">Add To Cart</button>
     </div>
