--- a/CSS/Responsive/index.html
+++ b/CSS/Responsive/index.html
@@ -1,11 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Resposive Design</title>
-</head>
-<body>
-    
-</body>
+    <style>
+      body {
+        margin: 0px;
+        padding: 0px;
+        font-family: Arial, Helvetica, sans-serif;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        background-color: #1a1a1a;
+      }
+      .responsive-div {
+        width: 100%;
+        max-width: 1200px;
+        padding: 20px;
+        color: #fff;
+        font-size: 26px;
+        background-color: #7e0a93;
+      }
+      @media (max-width: 600px) {
+        .responsive-div {
+          background-color: #3498db;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="responsive-div">
+      this div changes color based on the screen size
+    </div>
+  </body>
 </html>
