--- a/CSS/Bootstrap/index.html
+++ b/CSS/Bootstrap/index.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bootstrap</title>
-    
-
+    <link
+      rel="stylesheet"
+      href="	https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+    />
     <style>
       body {
         background-color: #1a1a1a;
         height: 100vh;
         display: flex;
-        justify-items: center;
+        justify-content: center;
         align-items: center;
       }
     </style>
   </head>
   <body>
-    <button class="bt btn-warning">chai code</button>
+    
+    <div class="content">
+      <div class="card" style="width: 18rem">
+        <img src="../images/high-angle-old-motorcycle-outdoors.jpg" class="card-img-top" alt="..." />
+        <div class="card-body">
+          <h5 class="card-title">Cafe Racer</h5>
+          <p class="card-text">
+            Some quick example text to build on the card title and make up the
+            bulk of the card's content.
+          </p>
+          <a href="#" style="width: 100%;" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
