--- a/Tailwind/src/first.html
+++ b/Tailwind/src/first.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Hello</h1>
-</body>
+    <link rel="stylesheet" href="./output.css" />
+  </head>
+  <body>
+    <h1 class="underline bg-orange-700">Hello</h1>
+
+    <p class="underline">
+      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Rem dolorum quia
+      inventore iure beatae dignissimos vel molestias similique at accusantium?
+      Dignissimos voluptate alias, mollitia voluptatibus illum aliquid nisi
+      consequatur commodi.
+    </p>
+  </body>
 </html>
